Merged Invoice clipboard reads into existing Amazon Order info to simplify things